# stm32_cubemx_qmc5883l

./: .gitmodules  CMakeLists.txt
Core/Src/: main.c
app/: CMakeLists.txt
app/main/: CMakeLists.txt
app/qmc5883l/: CMakeLists.txt  qmc5883l.c  qmc5883l.cpp  qmc5883l.h  qmc5883l.hpp  qmc5883l_config.h  qmc5883l_config.hpp  qmc5883l_registers.h  qmc5883l_registers.hpp
